[package]
name = "yuque-squirrel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["rt", "time", "fs"] }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
futures = { version = "0.3", default-features = false }
anyhow = "1.0"
serde_json = "1.0"

[profile.release]
lto = "fat"
